small color change for plot

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ function plotLine(varName){
 	lineChart.append("path")
 		      .datum(salesData)
 		      .attr("fill", "none")
-		      .attr("stroke", "#9b59b6")
+		      .attr("stroke", "#3498db")
 		      .attr("stroke-linejoin", "round")
 		      .attr("stroke-linecap", "round")
 		      .attr("stroke-width", 1.5)
@@ -204,7 +204,7 @@ function plotLine(varName){
 	lineChart.append("path")
 		      .datum(varData)
 		      .attr("fill", "none")
-		      .attr("stroke", "orange")
+		      .attr("stroke", "#9b59b6")
 		      .attr("stroke-linejoin", "round")
 		      .attr("stroke-linecap", "round")
 		      .attr("stroke-width", 1.5)
