--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
 <title>Project 2</title>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="http://d3js.org/topojson.v2.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 <style>
 	body{
-		background-color: #7f8c8d;
-		font-family: 'Raleway', sans-serif;
+		/*background-color: #7f8c8d;*/
+		font-family: 'Open Sans', sans-serif;
 	}
 	h1{
-/*		font-family: 'Baloo Bhaina', cursive;
+		font-family: 'Open Sans', sans-serif;
 		font-size: 48px;
-		color: #7f8c8d;
-		background: -webkit-linear-gradient(#7f8c8d, #485051);
-	  -webkit-background-clip: text;
-	  -webkit-text-fill-color: transparent;*/
 	}
 	svg{
 		background-color: white;
-		border: 1px solid black;
+		border: 1px solid #95a5a6;
 		margin-top: 10px;
 		margin-bottom: 10px;
 	}
@@ -28,19 +24,20 @@
 		margin: 40px auto;
 		max-width: 1000px;
 		padding: 10px 40px 20px;
-		border-radius: 5px;
-		border: 1px solid #485051;
-		background-color: #ecf0f1;
-		-webkit-box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.5);
-		-moz-box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.5);
-		box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.5);
+		border: 1px solid #ecf0f1;
+	}
+	.word1{
+		color: #3498db;
+	}
+	.word2{
+		color: #9b59b6;
 	}
 </style>
 </head>
 <body>
 <div class="container">
-	<h1>Project 2 Title</h1>
-	<p>Something about this project is written here to get you interested and give context.</p>
+	<h1>Do Artists Only <span class="word1">Rap</span> About Reasonably Priced <span class="word2">Cars</span>?</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<svg id="line-chart"/>
 	<svg id="bar-chart"/>
 	<!-- <svg id="freq-chart" width='700' height='700'/><br> -->
