--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="http://d3js.org/topojson.v2.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <style>
 	body{
 		/*background-color: #7f8c8d;*/
@@ -36,13 +37,16 @@
 </head>
 <body>
 <div class="container">
-	<h1>Do Artists Only <span class="word1">Rap</span> About Reasonably Priced <span class="word2">Cars</span>?</h1>
+	<h1><span>Do Artists Only </span><span class="word1">Rap </span><span>About Reasonably Priced </span><span class="word2">Cars</span><span>?</span></h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<svg id="line-chart"/>
 	<svg id="bar-chart"/>
 	<!-- <svg id="freq-chart" width='700' height='700'/><br> -->
 </div>
 <script>
+// hide page
+$(".container").hide();
+
 // DIMENSIONS FOR LINE CHART
 var widthLC = 600
 var heightLC = 400
@@ -392,6 +396,14 @@ var q = d3.queue();
 q.defer(d3.csv, 'Car_Rap_Percentages(2).csv', parseCarRow)
 	.defer(d3.csv, 'album_sales.csv', parseSalesRow)
 	.await(initData);
+
+$(document).ready(function() {
+    // $("span").not(".word1,.word2").hide();
+   	$(".container").fadeIn(1000);
+   	// setTimeout(function(){
+   	// 	$("span").not(".word1,.word2").show(1000);
+   	// }, 500);
+});
 </script>
 </body>
 </html>
