--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 		margin-top: 10px;
 		margin-bottom: 10px;
 	}
+	hr{
+		border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    /*border-bottom: 1px solid rgba(255, 255, 255, 0.3);*/
+	}
 	.container{
 		margin: 40px auto;
 		max-width: 1000px;
@@ -33,15 +39,20 @@
 	.word2{
 		color: #9b59b6;
 	}
+	.credits{
+		font-size: 12px;
+	}
 </style>
 </head>
 <body>
 <div class="container">
 	<h1><span>Do Artists Only </span><span class="word1">Rap </span><span>About Reasonably Priced </span><span class="word2">Cars</span><span>?</span></h1>
+
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<svg id="line-chart"/>
 	<svg id="bar-chart"/>
 	<!-- <svg id="freq-chart" width='700' height='700'/><br> -->
+	<p class="credits">by Leah Ajmani, Saqif Badruddin, and Derrick Ho</p>
 </div>
 <script>
 // hide page
