--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <div class="container">
-	<h1><span>Do Artists Only </span><span class="word1">Rap </span><span>About Reasonably Priced </span><span class="word2">Cars</span><span>?</span></h1>
+	<h1><span>Do Artists Only </span><span class="word1">Rap </span><br><span>About Reasonably Priced </span><span class="word2">Cars</span><span>?</span></h1>
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<svg id="line-chart"/>
@@ -162,13 +162,22 @@ function graphSales(){
 		      .attr("stroke-width", 1.5)
 		      .attr("d", line);
 	//Draws axes	      
-	 lineChart.append("g")
-      .attr("transform", "translate(0,"+(heightLC-paddingLC)+")")
-      .call(d3.axisBottom(xAxis))
+	lineChart.append("g")
+    .attr("transform", "translate(0,"+(heightLC-paddingLC)+")")
+    .call(d3.axisBottom(xAxis))
 
-  	lineChart.append("g")
-  	.attr("transform", "translate("+(paddingLC)+",0)")
-      .call(d3.axisLeft(yAxis))
+	lineChart.append("g")
+		.attr("transform", "translate("+(paddingLC)+",0)")
+    .call(d3.axisLeft(yAxis))
+
+  // Label axes
+  lineChart.append("text")
+		.attr("x", (widthLC-20) * 0.5)
+		.attr("y", heightLC - paddingLC/4)
+		.text("Year");
+	lineChart.append("text")
+		.attr("transform", "rotate(270) translate(-250, " + paddingLC/2.5 + ")")
+		.text("Percent Change");
 }
 
 //Graphs [varName] and US Album sales over time
@@ -223,12 +232,12 @@ function plotLine(varName){
 		      .attr("d", line);
 	//Draw axes	      
 	 lineChart.append("g")
-      .attr("transform", "translate(0,"+(heightLC-paddingLC)+")")
-      .call(d3.axisBottom(xAxis))
+    .attr("transform", "translate(0,"+(heightLC-paddingLC)+")")
+    .call(d3.axisBottom(xAxis));
 
-  	lineChart.append("g")
-  	.attr("transform", "translate("+(paddingLC)+",0)")
-     .call(d3.axisLeft(yAxis))
+	lineChart.append("g")
+		.attr("transform", "translate("+(paddingLC)+",0)")
+	  .call(d3.axisLeft(yAxis));
 
 }
 
@@ -308,12 +317,13 @@ function createBars(year){
 	barData.forEach(
 		function(d, i){
 			barChart.append('line')
-					.attr('x1', lengthScale(0))
-					.attr('y1', heightScale(i))
-					.attr('x2', lengthScale(valueScale(d.Value)))
-					.attr('y2', heightScale(i))
-					.style('stroke', colorScale(valueScale(d.Value)))
-					.style('stroke-width', 15)
+				.attr('x1', lengthScale(0))
+				.attr('y1', heightScale(i))
+				.attr('x2', lengthScale(valueScale(d.Value)))
+				.attr('y2', heightScale(i))
+				.style('stroke', colorScale(valueScale(d.Value)))
+				.style('stroke-width', 15)
+				.attr("onmouseover","plotLine('"+d.Name+"')");
 		}
 	)
 }
@@ -327,11 +337,20 @@ function initBarChart(){
 	createBars(1994);
 	barChart.append('line')
 			.attr('x1', lengthScale(0))
-			.attr('y1', paddingBC/2)
+			.attr('y1', paddingBC/1.5)
 			.attr('x2', lengthScale(0))
-			.attr('y2', heightBC-paddingBC/2)
+			.attr('y2', heightBC-paddingBC/1.5)
 			.style('stroke', 'black')
 			.style('stroke-width', 1);
+
+	// Label axes
+  barChart.append("text")
+		.attr("x", (widthBC-100) * 0.5)
+		.attr("y", heightBC - paddingBC/4)
+		.text("Percent Change");
+	barChart.append("text")
+		.attr("transform", "rotate(270) translate(-230, " + paddingBC/2.5 + ")")
+		.text("Car Make");
 }
 
 /****************FREQUENCY CHART (JUST ME PLAYING AROUND)*************************/
@@ -412,8 +431,8 @@ $(document).ready(function() {
     // $("span").not(".word1,.word2").hide();
    	$(".container").fadeIn(1000);
    	// setTimeout(function(){
-   	// 	$("span").not(".word1,.word2").show(1000);
-   	// }, 500);
+   	// 	$("span").not(".word1,.word2").show(1500);
+   	// }, 1000);
 });
 </script>
 </body>
